# Flame_Of_Styx_bot

./: .docker-requirements-hash  .flake8  .gitallowed  .gitattributes  .gitconfig  .gitignore  .gitsecrets  .isort.cfg  .pre-commit-config.auto.yaml  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CHANNEL_FIX_INSTRUCTIONS.md  CHANNEL_SETUP.md  COMMANDS.md  CONTRIBUTING.md  CTO_BRIEF_CODE_REVIEW.md  CURSOR_CLI.md  DATABASE_FIX_SIMPLE.md  DATABASE_MIGRATION_FIX.md  DEPENDABOT_SAFETY.md  DI_BEST_PRACTICES.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_UPDATE.md  Dockerfile  FIXES_SUMMARY.md  GIT_CLEANUP_REPORT.md  GIT_EDITOR_SETUP.md  GIT_SAFE_DIRECTORY_FIX.md  INSTALLATION_FIXES.md  INSTALL_REFACTORED.md  ISSUE_SUSPICIOUS_ANALYZE_ERROR.md  LICENSE  MONITORING_COMPLETION_REPORT.md  MONITORING_SETUP.md  Makefile  PERFORMANCE_TESTING_REPORT.md  PERMISSIONS_FIX.md  PROJECT_STATUS_REPORT.md  QUICKSTART.md  (+51 more)
.amazonq/rules/: russian.md
.cursor/rules/: antispam.mdc  best-practices.mdc
.githooks/: pre-commit
.github/: CODE_REVIEW_GUIDELINES.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/docs/: variables.yml
.github/workflows/: backup.yml  basic-test.yml  benchmark.yml  check.yml  ci.yml  cleanup.yml  code_quality.yml  codeql.yml  deploy.yml  docker.yml  docs.yml  format.yml  git-secrets.yml  import-test.yml  lint.yml  minimal.yml  monitor.yml  notify.yml  performance.yml  quality.yml  release.yml  security.yml  simple-check.yml  simple-deploy.yml  simple.yml  stale.yml  test.yml  tests.yml  ultra-simple.yml  update.yml  version.yml
alembic/: env.py
alembic/versions/: 0001_initial_migration.py  e2b091aa88ca_add_linked_chat_id_and_is_comment_group_.py
app/: config.py  constants.py  container.py  database.py
app/auth/: authorization.py
app/config/: logging_config.py
app/filters/: is_admin.py  is_admin_or_silent.py
app/handlers/: admin.py  antispam.py  channels.py  user.py
app/handlers/admin/: __init__.py  alerts.py  basic.py  bots.py  channels.py  interactive.py  limits.py  moderation.py  rate_limit.py  spam_analysis.py  suspicious.py  utils.py
app/keyboards/: inline.py  reply.py
app/middlewares/: dependency_injection.py  dependency_injection_simple.py  di_middleware.py  logging.py  ratelimit.py  redis_rate_limit.py  silent_logging.py  suspicious_profile.py  validation.py
app/models/: __init__.py  bot.py  channel.py  moderation_log.py  secure_models.py  secure_repr.py  suspicious_profile.py  user.py
app/monitoring/: __init__.py  alerts.py  health.py  metrics.py
app/services/: __init__.py  admin.py  alerts.py  bots.py  bots_admin.py  callbacks.py  channels.py  channels_admin.py  config_watcher.py  help.py  limits.py  links.py  moderation.py  profiles.py  redis.py  redis_rate_limiter.py  status.py  suspicious_admin.py
app/utils/: advanced_logging.py  alerts.py  error_handling.py  graceful_shutdown.py  pii_protection.py  security.py  validation.py  windows_safe.py
docs/: ADMIN_GUIDE.md  ADMIN_GUIDE_NEW.md  AI_RULES.md  API.md  ARCHITECTURE.md  BEST_PRACTICES.md  BUGFIXES_HISTORY.md  CHECKLISTS.md  CODE_EXAMPLES.md  CONFIG.md  CONFIGURATION.md  DEBUG_COMMANDS.md  DEPENDENCY_INJECTION.md  DEPLOYMENT.md  DEVELOPER_CHECKLIST.md  DEVELOPER_QUESTIONS.md  DEVELOPMENT.md  DEVOPS.md  DI_REFACTORING_COMPLETE.md  GITHUB_ACTIONS.md  GIT_SECRETS.md  GRACEFUL_SHUTDOWN_TEST.md  HOT_RELOAD.md  INDEX.md  INSTALLATION.md  LETSENCRYPT.md  MONITORING_CHECKLIST.md  MONITORING_DEPLOYMENT_GUIDE.md  OFFICIAL_DOCUMENTATION.md  PERFORMANCE_TESTING.md  POWERSHELL_SETUP.md  REDIS_RATE_LIMITING.md  ROADMAP.md  SECURITY.md  SECURITY_FIXES.md  SECURITY_GUIDELINES.md  STARTUP_MESSAGES.md  SUSPICIOUS_PROFILES.md  TODO.md  TROUBLESHOOTING.md  (+1 more)
monitoring/: README.md  alertmanager.yml  antispam_rules.yml  docker-compose.monitoring.yml  prometheus.yml
nginx/: Dockerfile.certbot  certbot.conf  nginx.conf
nginx/certbot-scripts/: certbot-init.sh  certbot-renew.sh  certbot-status.sh
scripts/: MONITORING_SCRIPTS.md  backup.sh  build-uptime-kuma.sh  check-monitoring.sh  deploy.sh  diagnose-git-secrets.py  diagnose-github-actions.py  docker-dev-smart.ps1  docker-dev-smart.sh  docker-dev.ps1  docker-dev.sh  fix-naming.sh  fix-uptime-kuma.sh  fix_all_log_injection.py  fix_comment_groups.py  fix_comment_groups.sh  fix_critical_log_injection.py  fix_critical_vulnerabilities.py  fix_database.sh  fix_database_simple.sh  fix_log_injection.py  fix_remaining_vulnerabilities.py  fix_security_vulnerabilities.py  force-fix-uptime-kuma.sh  healthcheck.sh  init-git.ps1  init-git.sh  init-letsencrypt.sh  install-bot.sh  install-docker.sh  install-external-monitoring.sh  install-git-secrets.ps1  install-git-secrets.sh  install-glances-monitoring.sh  install-modular.sh  install-monitoring-docker-fallback.sh  install-monitoring-netdata-only.sh  install-monitoring-simple.sh  install-monitoring.sh  install-netdata-only.sh  (+48 more)
scripts/install/: install-config.sh  install-core.sh  install-monitoring-module.sh  install-security.sh  install-system.sh  install-telegram.sh  install-utils.sh
systemd/: antispam-bot.service  install.sh
systemd/antispam-bot.service.d/: override.conf
tests/: __init__.py  conftest.py  test_antispam_rules.py  test_antispam_simple.py  test_bot.py  test_config.py  test_config_enhanced.py  test_container.py  test_error_handling.py  test_final.py  test_imports.py  test_middlewares.py  test_models.py  test_redis.py  test_redis_rate_limiting.py  test_security.py  test_services.py  test_simple.py  test_utils.py  test_validation.py  test_validation_simple.py
tests/integration/: __init__.py  conftest.py  test_bot_commands_flow.py  test_database_operations.py  test_dependency_injection.py  test_handlers_services.py  test_middleware_chain.py
tests/performance/: __init__.py  conftest.py  test_database_performance.py  test_middleware_performance.py  test_services_performance.py  test_simple_performance.py  test_utils_performance.py
